tsb-en/assets/setup/ratings-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-ratings-no-iptables
  namespace: bookinfo
spec:
  egress:
    - bind: 127.0.0.2
      hosts:
        - ./*
  ingress:
    - defaultEndpoint: 127.0.0.1:9080
      port:
        name: http
        number: 9080
        protocol: HTTP
  workloadSelector:
    labels:
      app: ratings
      class: vm
